<resources>
    <string name="app_name">Practical 3</string>
    <string name="text1">text</string>
    <string name="lorem_ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="btn2">Follow</string>
    <string name="btn3">Message</string>
    <string name="btnGroup1">Group 1</string>
    <string name="btnGroup2">Group 2</string>
    <string name="passwordText">Password</string>
    <string name="loginPageTitle">Login Page</string>
    <string name="usernameText">Username</string>
    <string name="loginButtonText">Login</string>

</resources>